src/cell/cell.less
@import '../common/style/index.less';

@cell-height: var(--td-cell-height, auto);
@cell-line-height: var(--td-cell-line-height, 48rpx);
@cell-vertical-padding: var(--td-cell-vertical-padding, 32rpx);
@cell-horizontal-padding: var(--td-cell-horizontal-padding, 32rpx);
@cell-bg-color: var(--td-cell-bg-color, @bg-color-container);
@cell-hover-color: var(--td-cell-hover-color, @bg-color-secondarycontainer);
@cell-border-color: var(--td-cell-border-color, @component-stroke);
@cell-border-width: var(--td-cell-border-width, 1px);
@cell-border-left-space: var(--td-cell-border-left-space, @cell-horizontal-padding);
@cell-border-right-space: var(--td-cell-border-right-space, 0);
@cell-description-color: var(--td-cell-description-color, @text-color-secondary);
@cell-description-font-size: var(--td-cell-description-font-size, @font-size-base);
@cell-description-line-height: var(--td-cell-description-line-height, 44rpx);
@cell-note-color: var(--td-cell-note-color, @text-color-placeholder);
@cell-note-font-size: var(--td-cell-note-font-size, @font-size-m);
@cell-title-color: var(--td-cell-title-color, @text-color-primary);
@cell-title-font-size: var(--td-cell-title-font-size, @font-size-m);
@cell-left-icon-color: var(--td-cell-left-icon-color, @brand-color);
@cell-left-icon-font-size: var(--td-cell-left-icon-font-size, 48rpx);
@cell-right-icon-color: var(--td-cell-right-icon-color, @text-color-placeholder);
@cell-right-icon-font-size: var(--td-cell-right-icon-font-size, 48rpx);
@cell-required-color: var(--td-cell-required-color, @error-color-6);
@cell-required-font-size: var(--td-cell-required-font-size, @font-size-m);
@cell-image-width: var(--td-cell-image-width, 96rpx);
@cell-image-height: var(--td-cell-image-height, 96rpx);

.@{prefix}-cell {
  position: relative;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: @cell-vertical-padding @cell-horizontal-padding;
  line-height: @cell-line-height;
  height: @cell-height;
  background-color: @cell-bg-color;

  &::after {
    .hairline-bottom(@cell-border-color, @cell-border-width);
    transform-origin: bottom;
    left: @cell-border-left-space;
    right: @cell-border-right-space;
  }

  &--borderless::after {
    display: none;
  }

  &__description {
    font-size: @cell-description-font-size;
    line-height: @cell-description-line-height;
    color: @cell-description-color;

    &-text {
      margin-top: calc(@spacer / 2);
    }
  }

  &__note {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    color: @cell-note-color;
    font-size: @cell-note-font-size;
  }

  &__title,
  &__note {
    flex: 1 1 auto;

    &:empty {
      display: none;
    }
  }

  &__title-text {
    display: flex;
    font-size: @cell-title-font-size;
    color: @cell-title-color;
    font-weight: 400;
  }

  &__left,
  &__right {
    display: flex;
    align-items: center;
  }

  &__left {
    &:not(:empty) {
      margin-right: @spacer;
    }

    &-icon {
      color: @cell-left-icon-color;
      font-size: @cell-left-icon-font-size;
    }

    &-image {
      height: @cell-image-height;
      width: @cell-image-width;
    }
  }

  &__right {
    margin-left: calc(@spacer / 2);

    &-icon {
      color: @cell-right-icon-color;
      font-size: @cell-right-icon-font-size;
    }
  }

  &--hover {
    background-color: @cell-hover-color;
  }

  &--required {
    font-size: @cell-required-font-size;
    color: @cell-required-color;
  }

  &--middle {
    align-items: center;
  }

  &--top {
    align-items: flex-start;
  }

  &--bottom {
    align-items: flex-end;
  }
}

